--- a/officers/templates/selectPurpose.html
+++ b/officers/templates/selectPurpose.html
@@ -109,7 +109,7 @@
                 
                     <!-- Dropdown menu -->
                     <div id="dropdownMenu" class="hidden absolute right-0 mt-2 w-48 bg-white rounded-md shadow-lg py-1 z-10 opacity-0 transform -translate-y-2 transition duration-300 ease-in-out">
-                    <a href="#" class="block px-4 py-2 text-sm font-semibold text-gray-700 hover:bg-blue-300">Profile</a>
+                    <a href="{% url 'officer_profile' %}" class="block px-4 py-2 text-sm font-semibold text-gray-700 hover:bg-blue-300">Profile</a>
                     <a href="#" class="block px-4 py-2 text-sm font-semibold text-gray-700 hover:bg-blue-300">Settings</a>
                     <a href="{% url 'officer_logout' %}" class="block px-4 py-2 text-sm font-semibold text-red-600 hover:bg-blue-300">Logout</a>
                     </div>
