Buildphase 3 : steps 2 and 3 forms, seperated into different templates to easy CI/CD

--- a/officers/templates/selectPurpose.html
+++ b/officers/templates/selectPurpose.html
@@ -224,7 +224,7 @@ function hideModal() {
 
 // Event listeners for buttons to show modal
 newDocketBtn.addEventListener('click', function() {
-    showModal('{% url "docketforms" %}');
+    showModal('{% url "CaseStep1View" %}');
 });
 searchDatabaseBtn.addEventListener('click', function() {
     showModal('{% url "searchdatabase" %}');
