--- a/officers/templates/CaseStep1View.html
+++ b/officers/templates/CaseStep1View.html
@@ -39,9 +39,9 @@
 
 
             <!-Content for Step 1 -->
-            <div id="stepGroup1" class="step-group form_step1" data-step-group="1">
+            <div id="stepGroup1" class="step-group" data-step-group="1">
             <div class="mb-8 bg-green-200 p-3">
-            <form method="post" action="{% url 'CaseStep1View' %}" class="form_step1" novalidate>
+            <form method="post" action="{% url 'CaseStep1View' %}"  novalidate>
             <div class="grid grid-cols-2 gap-6 sm:grid-cols-1">
 
                     {% csrf_token %}
@@ -250,7 +250,7 @@
                     <!-- Back Button -->
                     <button type="button" id="backButton" class="bg-gray-600 hover:bg-gray-500 text-white font-semibold py-2 px-4 rounded-md shadow-sm">Back</button>
                     <!-- Continue Button -->
-                    <button type="submit" id="continueButton" class="bg-blue-600 hover:bg-blue-500 text-white font-semibold py-2 px-4 rounded-md shadow-sm">Continue</button>
+                    <button type="submit" id="continueButt" class="bg-blue-600 hover:bg-blue-500 text-white font-semibold py-2 px-4 rounded-md shadow-sm">Continue</button>
                 </div>
                 </div>
                 
