--- a/officers/templates/CaseStep3View.html
+++ b/officers/templates/CaseStep3View.html
@@ -153,7 +153,7 @@
                 <!-- Back Button -->
                 <button type="button" id="backButton" class="bg-gray-600 hover:bg-gray-500 text-white font-semibold py-2 px-4 rounded-md shadow-sm">Back</button>
                 <!-- Continue Button -->
-                <button type="submit" id="continueButton" class="bg-blue-600 hover:bg-blue-500 text-white font-semibold py-2 px-4 rounded-md shadow-sm">Continue</button>
+                <button type="submit" id="continue" class="bg-blue-600 hover:bg-blue-500 text-white font-semibold py-2 px-4 rounded-md shadow-sm">Continue</button>
             </div>
             </div>
             </form>
